--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
     <div id="content">
     </div>
 
-    <script src="http://localhost:9090/webpack-dev-server.js"></script>
-    <script type="text/javascript" src="http://localhost:9090/assets/bundle.js"></script>
+    <script src="/webpack-dev-server.js"></script>
+    <script src="/assets/bundle.js"></script>
 </body>
 </html>
