--- a/example/inline.html
+++ b/example/inline.html
@@ -2,14 +2,13 @@
 
 <html>
 <head>
-    <title>Dialog</title>
+    <title>UXCore-Dialog</title>
     <script src="../node_modules/react/dist/react.js"></script>
 </head>
 <body>
-    <div id="content">
-    </div>
-    
+    <div id="content"></div>
+
     <script src="/webpack-dev-server.js"></script>
-    <script src="/assets/bundle.js"></script>
+    <script src="/assets/inline.bundle.js"></script>
 </body>
 </html>
