--- a/example/inline.html
+++ b/example/inline.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <div id="content"></div>
-
-    <script src="/webpack-dev-server.js"></script>
-    <script src="/assets/inline.bundle.js"></script>
+    <script src="/inline.bundle.js"></script>
 </body>
 </html>
