--- a/example/simple.html
+++ b/example/simple.html
@@ -8,7 +8,6 @@
 <body>
     <div id="content"></div>
 
-    <script src="/webpack-dev-server.js"></script>
-    <script src="/assets/simple.bundle.js"></script>
+    <script src="/simple.bundle.js"></script>
 </body>
 </html>
