--- a/example/standalone.html
+++ b/example/standalone.html
@@ -8,7 +8,6 @@
 <body>
     <div id="content"></div>
 
-    <script src="/webpack-dev-server.js"></script>
-    <script src="/assets/standalone.bundle.js"></script>
+    <script src="/standalone.bundle.js"></script>
 </body>
 </html>
